tests/NormalTests/paczka1/small_fuzzy/10572147.err
Error in line 2: M4R S560 21,1
Error in line 8: ois S705 67,9
Error in line 10: 3G1RRz S945 54,2
